# cairo-vm-gs

./: .claspignore  .gitignore  README.md  appsscript.json  constants.js  instructions.js  package-lock.json  package.json  pyproject.toml  qq  tests.js  tsconfig.json  vm.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: trunk-check.yaml
.trunk/: trunk.yaml
Notebooks/: casm_polars.ipynb
cairo0/: dict.cairo  dict_compiled.json  fibonacci.cairo  fibonacci_compiled.json  main.cairo  main_compiled.json  main_compiled_proof_mode.json
cairo0/builtins/: bitwise_buitin.json  ecop_builtin.json  keccak_builtin.json  pedersen_builtin.json  poseidon_builtin.json  range_check96_buitlin.json  range_check_builtin.json
cairo0/fibonacci/: fibonacci.cairo  main.cairo  main_compiled.json
notebooks/: casm_verifier.py
python-cairo0/: pyproject.toml
src/: Code.js  Code.ts  builtin.ts  builtins.ts  constants.js  constants.ts  dialog.html  errors.js  instructions.js  instructions.ts  tests.js  tests.ts  ui.js  ui.ts  utils.js  utils.ts  vm.js  vm.ts
src/builtins/bitwise/: bitwise.ts
src/builtins/ec_op/: ec_op.ts  modular_ar.ts
src/builtins/ecdsa/: ecdsa.ts
src/builtins/keccak/: keccak.ts  keccak_f1600.ts  keccak_utils.ts
src/builtins/pedersen/: constants.ts  pedersen.ts
src/builtins/poseidon/: constants.ts  poseidon.ts
src/builtins/range_check/: range_check.ts
src/builtins/range_check96/: range_check96.ts
src/ui/: Code.ts  api.ts  dialog.html  ui.ts
src/ui/tutorials/: tutorials.ts
src/vm/: constants.ts  errors.ts  instructions.ts  vm.ts
(+2 files in other folders)
