[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Clément Walter", email = "clement0walter@gmail.com"},
]
requires-python = "~=3.9.0"
dependencies = [
    "cairo-lang<1.0.0,>=0.13.1",
    "polars>=1.22.0",
]
name = "cairo-vm-gs"
version = "0.1.0"
description = ""
